--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,5 @@ build/
 
 ### VS Code ###
 .vscode/
-/src/main/resources/application-local.properties
+/src/main/resources/application-local.yml
 /logs/
