--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
-    name: scrapper-service
+    name: remind-pack-scrapper-svc
+  config:
+    import: configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8888}
 
 
 # Logging
