add bridge brave

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
             <artifactId>micrometer-tracing-bridge-otel</artifactId>
             <version>1.5.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.micrometer/micrometer-tracing-bridge-brave -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-tracing-bridge-brave</artifactId>
+            <version>1.5.1</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-client</artifactId>
