--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,20 +6,34 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Build and Push Docker Image to Docker Hub
+name: Build and Deploy to VPS
 
 on:
   push:
     branches: [ "master" ]
+    tags: [ "v*" ]  # Trigger on tags
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
+  build_and_push:
+    name: Build and Push Docker image
+    # Only build on tag pushes
+    if: startsWith(github.ref, 'refs/tags/v')
     environment: production
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ vars.DOCKER_IMAGE_NAME }}
+          tags: |
+            # Use tag name for tagged releases
+            type=ref,event=tag
+            # Use 'latest' for tagged releases
+            type=raw,value=latest
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -28,9 +42,63 @@ jobs:
           password: ${{ secrets.DOCKER_PASS }}
 
       - name: Build and push Docker image
+        id: build
         uses: docker/build-push-action@v5
         with:
           context: .
           file: docker/Dockerfile
           push: true
-          tags: ${{ vars.DOCKER_IMAGE_NAME }}:${{ vars.DOCKER_IMAGE_TAG }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+  deploy:
+    name: Deploy to VPS
+    # Only deploy on master branch pushes
+    if: github.ref == 'refs/heads/master'
+    environment: production
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+
+      - name: Set deployment info
+        run: |
+          # Set deployment info using latest tag
+          echo "IMAGE_NAME=${{ vars.DOCKER_IMAGE_NAME }}" >> deployment.env
+          echo "SERVICE_NAME=${{ vars.SERVICE_NAME }}" >> deployment.env
+          echo "IMAGE_TAG=${{ vars.DOCKER_IMAGE_NAME }}:latest" >> deployment.env
+          
+          echo "Deployment info:"
+          cat deployment.env
+
+      - name: Copy deployment script to VPS
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          port: ${{ secrets.VPS_PORT || 22 }}
+          source: "scripts/deploy.sh"
+          target: "/tmp/"
+
+      - name: Deploy to VPS
+        uses: appleboy/ssh-action@v1.0.3
+        env:
+          IMAGE_NAME: ${{ vars.DOCKER_IMAGE_NAME }}
+          SERVICE_NAME: ${{ vars.SERVICE_NAME }}
+          IMAGE_TAG: ${{ vars.DOCKER_IMAGE_NAME }}:latest
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          port: ${{ secrets.VPS_PORT || 22 }}
+          envs: IMAGE_NAME,SERVICE_NAME,IMAGE_TAG
+          script: |
+            # Make script executable
+            chmod +x /tmp/scripts/deploy.sh
+            
+            echo "Deploying with image: $IMAGE_TAG"
+            echo "Service: $SERVICE_NAME"
+            
+            # Run deployment script
+            /tmp/scripts/deploy.sh "$IMAGE_TAG" "$SERVICE_NAME"
