--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,9 @@ spring:
   application:
     name: remind-pack-scrapper-svc
   config:
-    import: configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8888}
+    import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8888}
+  output:
+    ansi:
+      enabled: always
+
 
