--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,7 @@ jobs:
             # Use tag name for tagged releases
             type=ref,event=tag
             # Use 'latest' for tagged releases
-            type=raw,value=latest
+            # type=raw,value=latest
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
