--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: remind-pack-scrapper-svc
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:prod}
   config:
     import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8888}
   output:
