--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:prod}
   config:
-    import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8888}
+    import: configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8888}
   output:
     ansi:
       enabled: always
