--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,6 @@ name: Build and Deploy to VPS
 
 on:
   push:
-    branches: [ "master" ]
     tags: [ "v*" ]  # Trigger on tags
 
 jobs:
@@ -33,7 +32,7 @@ jobs:
             # Use tag name for tagged releases
             type=ref,event=tag
             # Use 'latest' for tagged releases
-            # type=raw,value=latest
+            type=raw,value=latest
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -53,8 +52,6 @@ jobs:
 
   deploy:
     name: Deploy to VPS
-    # Only deploy on master branch pushes
-    if: github.ref == 'refs/heads/master'
     environment: production
     runs-on: ubuntu-latest
     steps:
