--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,20 @@
 spring:
   application:
     name: remind-pack-scrapper-svc
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:prod}
   config:
     import: optional:configserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8888}
   output:
     ansi:
       enabled: always
+  cloud:
+    refresh:
+      enabled: false
+    loadbalancer:
+      eager-load:
+        clients: scraper-puppeteer-svc
 
+logging:
+  config: classpath:log4j2-spring.xml
 
